--- a/src/QrGenerate.module.css
+++ b/src/QrGenerate.module.css
@@ -27,14 +27,16 @@
     flex-direction: column;
     align-items: center;
     justify-content: center; /* 세로 중앙 정렬 */
-    padding-bottom: 80px; /* 하단 네비게이션 공간 확보 */
+    padding-bottom: 200px; /* 하단 네비게이션 공간 확보 */
 }
 
 .brandLogo {
     display: flex;
+    position: relative;
+    right:5px;
     align-items: center;
     gap: 10px;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
 }
 
 .usdtIcon { width: 50px; height: 50px; }
